objects/Playground_Job__c.object
<CustomObject>
    <description>Jobs to complete the creation of a new Playground</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreateTrialOrg</fullName>
                </value>
                <value>
                    <fullName>CreateCoeCredential</fullName>
                </value>
                <value>
                    <fullName>CoE_Authorization</fullName>
                </value>
                <value>
                    <fullName>GitSetup</fullName>
                </value>
                <value>
                    <fullName>ProvisionLicenses</fullName>
                </value>
                <value>
                    <fullName>CreateEnvironment</fullName>
                </value>
                <value>
                    <fullName>CreateOrgCredentials</fullName>
                </value>
                <value>
                    <fullName>AuthorizeSandbox</fullName>
                </value>
                <value>
                    <fullName>AssignPermissionSet</fullName>
                </value>
                <value>
                    <fullName>ExecutePostInstallScript</fullName>
                </value>
                <value>
                    <fullName>CreateScratchOrgEnvironment</fullName>
                </value>
                <value>
                    <fullName>EnableUser</fullName>
                </value>
                <value>
                    <fullName>GitSetupFinish</fullName>
                </value>
                <value>
                    <fullName>CreateGitSnapshot</fullName>
                </value>
                <value>
                    <fullName>CreateBranches</fullName>
                </value>
                <value>
                    <fullName>CreateBoilerplate</fullName>
                </value>
                <value>
                    <fullName>AddingFinishingTouches</fullName>
                    <label>Adding Finishing Touches</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Git_Snapshot_Job_Id__c</fullName>
        <label>Git Snapshot Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <externalId>true</externalId>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Error message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>This field determines the order the jobs are displayed.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <label>Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Platform Job that relates to this Playground Job</description>
        <label>Platform Job Execution</label>
        <referenceTo>copado1p__Platform_Job_Execution__c</referenceTo>
        <relationshipLabel>Playground Jobs</relationshipLabel>
        <relationshipName>Playground_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playground_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playground Environment</label>
        <referenceTo>Playground_Enviroment__c</referenceTo>
        <relationshipLabel>Playground Jobs</relationshipLabel>
        <relationshipName>Playground_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playground__c</fullName>
        <label>Playground</label>
        <referenceTo>Playground__c</referenceTo>
        <relationshipLabel>Playground Jobs</relationshipLabel>
        <relationshipName>Playground_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remaining_Retry_Attempts__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>The field controls the remaining retry attempts.  Every time a job is being attempted again, the number of available attempts will be decremented by 1 until it reaches 0, at which point the job will not be retry&apos;ed anymore.</inlineHelpText>
        <label>Remaining Retry Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <label>Sandbox Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Sandbox Creation</fullName>
                </value>
                <value>
                    <fullName>Record Creation</fullName>
                </value>
                <value>
                    <fullName>Git</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Playground Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Playground__c</columns>
        <columns>Action__c</columns>
        <columns>NAME</columns>
        <columns>JobId__c</columns>
        <columns>Git_Snapshot_Job_Id__c</columns>
        <columns>Playground_Environment__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Payload__c</columns>
        <columns>Platform_Job_Execution__c</columns>
        <columns>Remaining_Retry_Attempts__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Complete_Jobs_without_Payload</fullName>
        <columns>Playground__c</columns>
        <columns>Action__c</columns>
        <columns>NAME</columns>
        <columns>JobId__c</columns>
        <columns>Git_Snapshot_Job_Id__c</columns>
        <columns>Playground_Environment__c</columns>
        <columns>Sandbox_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Payload__c</columns>
        <columns>Platform_Job_Execution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>notEqual</operation>
            <value>CreateTrialOrg,CreateCoeCredential,CoE_Authorization,GitSetup,AuthorizeSandbox</value>
        </filters>
        <label>Complete Jobs without Payload</label>
    </listViews>
    <nameField>
        <label>Playground Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playground Jobs</pluralLabel>
    <recordTypes>
        <fullName>C1P_Job</fullName>
        <active>true</active>
        <label>C1P Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Environment_Creation</fullName>
        <active>true</active>
        <label>Environment Creation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job</fullName>
        <active>true</active>
        <label>Job</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>